Introduction and Guidelines section of the course done

--- a/ChatGPT Prompt Engineering for Developers/1 Guidelines for Prompting.ipynb
+++ b/ChatGPT Prompt Engineering for Developers/1 Guidelines for Prompting.ipynb
@@ -17,14 +17,15 @@
    "id": "00bab499-9a50-4bd0-a622-1c914c6ccc29",
    "metadata": {},
    "source": [
-    "In this course, we've provided some code that loads the OpenAI API key for you."
+    "In this course, we've provided some code that loads the OpenAI API key for you. Make sure the environment file contains the OPENAI key (secret)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6c382975",
    "metadata": {
+    "height": 132,
     "tags": []
    },
    "outputs": [],
@@ -43,7 +44,7 @@
    "id": "a3acefa8-f8f1-4ef8-932e-9bcefa142666",
    "metadata": {},
    "source": [
-    "#### helper function\n",
+    "#### Helper function\n",
     "Throughout this course, we will use OpenAI's `gpt-3.5-turbo` model and the [chat completions endpoint](https://platform.openai.com/docs/guides/chat). \n",
     "\n",
     "This helper function will make it easier to use prompts and look at the generated outputs.  \n",
@@ -52,9 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a7dff174",
    "metadata": {
+    "height": 166,
     "tags": []
    },
    "outputs": [],
@@ -108,13 +110,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42339886",
+   "metadata": {
+    "height": 30
+   },
+   "source": [
+    "In this example there is a clear distinction. Since the request / prompt is seperated from the body / text through the delimeters \"\"\" (look at the prompt variable). We can avoid prompt injections because of it (the text contains some conflicitng words about the model which may confuse it so thats the reason)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "87121316",
    "metadata": {
+    "height": 336,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is important to provide clear and specific instructions to a model in order to guide it towards the desired output and reduce the chances of receiving irrelevant or incorrect responses, with longer prompts often providing more clarity and context for the model.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "You should express what you want a model to do by \\ \n",
@@ -148,12 +169,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6b50bbbd",
    "metadata": {
+    "height": 149,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"book_id\": 1,\n",
+      "        \"title\": \"The Midnight Garden\",\n",
+      "        \"author\": \"Elena Rivers\",\n",
+      "        \"genre\": \"Fantasy\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"book_id\": 2,\n",
+      "        \"title\": \"Whispers in the Wind\",\n",
+      "        \"author\": \"Lucas Blackwood\",\n",
+      "        \"genre\": \"Mystery\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"book_id\": 3,\n",
+      "        \"title\": \"Echoes of the Past\",\n",
+      "        \"author\": \"Samantha Greene\",\n",
+      "        \"genre\": \"Historical Fiction\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Generate a list of three made-up book titles along \\ \n",
@@ -175,12 +224,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f0ae612e",
    "metadata": {
+    "height": 506,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 1:\n",
+      "Step 1 - Get some water boiling.\n",
+      "Step 2 - Grab a cup and put a tea bag in it.\n",
+      "Step 3 - Pour the hot water over the tea bag.\n",
+      "Step 4 - Let the tea steep for a few minutes.\n",
+      "Step 5 - Remove the tea bag.\n",
+      "Step 6 - Add sugar or milk to taste.\n",
+      "Step 7 - Enjoy your delicious cup of tea.\n"
+     ]
+    }
+   ],
    "source": [
     "text_1 = f\"\"\"\n",
     "Making a cup of tea is easy! First, you need to get some \\ \n",
@@ -215,12 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "76b6cc59",
    "metadata": {
+    "height": 506,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 2:\n",
+      "No steps provided.\n"
+     ]
+    }
+   ],
    "source": [
     "text_2 = f\"\"\"\n",
     "The sun is shining brightly today, and the birds are \\\n",
@@ -263,12 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "82ce1540",
    "metadata": {
+    "height": 251,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<grandparent>: The tallest trees weather the strongest storms; the brightest stars shine in the darkest nights; the strongest hearts are forged in the hottest fires.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to answer in a consistent style.\n",
@@ -298,12 +382,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5e7d6860",
    "metadata": {
+    "height": 506,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for prompt 1:\n",
+      "1 - Jack and Jill, siblings on a quest for water, face misfortune but remain adventurous.\n",
+      "\n",
+      "2 - Jack et Jill, frère et sœur en quête d'eau, font face à la malchance mais restent aventureux.\n",
+      "\n",
+      "3 - Jack, Jill\n",
+      "\n",
+      "4 - \n",
+      "{\n",
+      "  \"french_summary\": \"Jack et Jill, frère et sœur en quête d'eau, font face à la malchance mais restent aventureux.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "In a charming village, siblings Jack and Jill set out on \\ \n",
@@ -346,12 +450,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3e4222cc",
    "metadata": {
+    "height": 370,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Completion for prompt 2:\n",
+      "Summary: Jack and Jill, siblings, go on a quest to fetch water but encounter misfortune on the way back.\n",
+      "\n",
+      "Translation: Jack et Jill, frère et sœur, partent en quête d'eau mais rencontrent un malheur en chemin.\n",
+      "\n",
+      "Names: Jack, Jill\n",
+      "\n",
+      "Output JSON: \n",
+      "{\n",
+      "  \"french_summary\": \"Jack et Jill, frère et sœur, partent en quête d'eau mais rencontrent un malheur en chemin.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt_2 = f\"\"\"\n",
     "Your task is to perform the following actions: \n",
@@ -386,12 +511,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ff5cc985",
    "metadata": {
+    "height": 421,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's solution is correct. The total cost for the first year of operations as a function of the number of square feet is indeed 450x + 100,000.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine if the student's solution is correct or not.\n",
@@ -430,12 +564,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "703f7003",
    "metadata": {
+    "height": 1016,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total cost for the first year of operations is the sum of the land cost, solar panel cost, and maintenance cost.\n",
+      "\n",
+      "1. Land cost: $100/sq ft * x sq ft = $100x\n",
+      "2. Solar panel cost: $250/sq ft * x sq ft = $250x\n",
+      "3. Maintenance cost: $100,000 + $10/sq ft * x sq ft = $100,000 + $10x\n",
+      "\n",
+      "Total cost = Land cost + Solar panel cost + Maintenance cost\n",
+      "Total cost = $100x + $250x + $100,000 + $10x\n",
+      "Total cost = $360x + $100,000\n",
+      "\n",
+      "Is the student's solution the same as actual solution just calculated:\n",
+      "```\n",
+      "Yes\n",
+      "```\n",
+      "Student grade:\n",
+      "```\n",
+      "Correct\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to determine if the student's solution \\\n",
@@ -499,6 +659,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ce33bdd",
+   "metadata": {
+    "height": 30
+   },
+   "source": [
+    "### Even after giving such a detailed prompt the model is saying the solution is correct when it is not. This could be because of the latest GPT update or maybe the prompt requires more detailed steps?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8a207eab-a1b1-47a5-b913-fe38086123d0",
    "metadata": {},
    "source": [
@@ -508,12 +678,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "81c80919",
    "metadata": {
+    "height": 98,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The AeroGlide UltraSlim Smart Toothbrush by Boie is a high-tech toothbrush designed to provide a superior cleaning experience. It features a sleek and slim design that makes it easy to hold and maneuver in the mouth. The toothbrush is equipped with smart technology that tracks your brushing habits and provides real-time feedback to help you improve your oral hygiene routine.\n",
+      "\n",
+      "The bristles of the AeroGlide UltraSlim Smart Toothbrush are made from a durable and hygienic material called thermoplastic elastomer, which is gentle on the gums and teeth. The toothbrush also has a built-in timer and pressure sensor to ensure that you are brushing for the recommended two minutes and applying the right amount of pressure.\n",
+      "\n",
+      "Overall, the AeroGlide UltraSlim Smart Toothbrush by Boie is a cutting-edge dental tool that combines style and functionality to help you achieve a healthier smile.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Tell me about AeroGlide UltraSlim Smart Toothbrush by Boie\n",
@@ -532,11 +715,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "77457878",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "height": 115
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medicalift 360 Everyday by Neutrogena is a skincare product that is designed to provide anti-aging benefits for the skin. It is formulated with a blend of ingredients that help to improve the appearance of fine lines and wrinkles, while also hydrating and nourishing the skin.\n",
+      "\n",
+      "The product is said to help improve skin firmness and elasticity, resulting in a more youthful and radiant complexion. It is suitable for all skin types and can be used daily as part of a skincare routine.\n",
+      "\n",
+      "Medicalift 360 Everyday by Neutrogena is dermatologist-tested and non-comedogenic, meaning it won't clog pores. It is also free of parabens, sulfates, and phthalates, making it a safe and effective option for those looking to combat the signs of aging.\n",
+      "\n",
+      "Overall, this product is designed to help improve the overall health and appearance of the skin, leaving it looking smoother, firmer, and more youthful.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# an example of a successful hallucination \n",
+    "prompt = f\"\"\"\n",
+    "Tell me about medicalift 360 everyday by neutrogena\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "067ad67d",
+   "metadata": {
+    "height": 115
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm sorry, but there is no information available about a product called \"Quantum Air 720\" by Apple Inc. It is possible that this product does not exist or that it is a concept that has not been officially announced by Apple. If you have any other questions or need information about a different Apple product, feel free to ask.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# an example of a failed hallucination\n",
+    "prompt = f\"\"\"\n",
+    "Tell me about quantum air 720 by apple inc\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -577,8 +808,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f92c1dcc-1cef-42f7-9291-fa1dfa9fcc1b",
+   "metadata": {
+    "height": 268
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<grandparent>: Resilience is like a mighty oak tree that withstands the fiercest storms, bending but never breaking. It is the ability to bounce back from adversity, to persevere in the face of challenges, and to emerge stronger than before. Just as the oak tree grows stronger with each passing storm, so too can we grow stronger through our trials and tribulations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# trying with \\n for the long text\n",
+    "prompt = f\"\"\"\n",
+    "Your task is to answer in a consistent style.\n",
+    "\n",
+    "<child>: Teach me about patience.\n",
+    "\n",
+    "<grandparent>: The river that carves the deepest \\n \n",
+    "valley flows from a modest spring; the \\n \n",
+    "grandest symphony originates from a single note; \\n \n",
+    "the most intricate tapestry begins with a solitary thread.\n",
+    "\n",
+    "<child>: Teach me about resilience.\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ace31da0",
+   "metadata": {
+    "height": 234
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<grandparent>: Resilience is like a tree that withstands the fiercest storms, bending but never breaking. It is the ability to bounce back from adversity, to find strength in the face of challenges, and to keep moving forward no matter what obstacles may come your way. Just like the tree, you too can weather any storm with resilience in your heart.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# trying with no delimeter for the long text\n",
+    "prompt = f\"\"\"\n",
+    "Your task is to answer in a consistent style.\n",
+    "\n",
+    "<child>: Teach me about patience.\n",
+    "\n",
+    "<grandparent>: The river that carves the deepest valley flows from a modest spring; the grandest symphony originates from a single note; the most intricate tapestry begins with a solitary thread.\n",
+    "\n",
+    "<child>: Teach me about resilience.\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ad4f3fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -600,7 +896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
