cleaned databricks rag notebook

--- a/Databricks RAG/Generative AI in Databricks.ipynb
+++ b/Databricks RAG/Generative AI in Databricks.ipynb
@@ -113,8 +113,8 @@
     "# os.environ[\"OPENAI_BASE_URL\"] = \"<your_workspace_url>/serving-endpoints/\"\n",
     "# os.environ[\"OPENAI_API_KEY\"] = \"<your_personal_access_token>\"\n",
     "\n",
-    "os.environ[\"OPENAI_BASE_URL\"] = \"https://adb-3989190133890802.2.azuredatabricks.net/serving-endpoints/databricks-dbrx-instruct/invocations\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"sk-proj-dRl3zkD4w93f9U4qtDYfT3BlbkFJPdqoVMJg6DBDEHFo5du6\""
+    "os.environ[\"OPENAI_BASE_URL\"] = \"\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
@@ -136,7 +136,7 @@
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "os.environ[\"DATABRICKS_TOKEN\"] = \"dapi89dbb6f67448e2f0c1e0d1db6ce213d9-3\"\n",
+    "os.environ[\"DATABRICKS_TOKEN\"] = \"\"\n",
     "\n",
     "DATABRICKS_TOKEN = os.environ.get('DATABRICKS_TOKEN')\n",
     "# Alternatively in a Databricks notebook you can use this:\n",
@@ -144,7 +144,7 @@
     "\n",
     "# client = OpenAI() \n",
     "\n",
-    "client = OpenAI(api_key=DATABRICKS_TOKEN,  base_url=\"https://adb-3989190133890802.2.azuredatabricks.net/serving-endpoints\")\n",
+    "client = OpenAI(api_key=DATABRICKS_TOKEN,  base_url=\"\")\n",
     "\n",
     "chat_completion = client.chat.completions.create(\n",
     "    model=\"databricks-dbrx-instruct\",\n",
@@ -184,7 +184,7 @@
     "\n",
     "client = OpenAI(\n",
     "  api_key=DATABRICKS_TOKEN,\n",
-    "  base_url=\"https://adb-3989190133890802.2.azuredatabricks.net/serving-endpoints\"\n",
+    "  base_url=\"\"\n",
     ")\n",
     "\n",
     "chat_completion = client.chat.completions.create(\n",
@@ -226,7 +226,7 @@
     "# client = OpenAI()\n",
     "\n",
     "try:\n",
-    "    client = OpenAI(api_key=\"sk-proj-dRl3zkD4w93f9U4qtDYfT3BlbkFJPdqoVMJg6DBDEHFo5du6\", base_url = \"https://api.openai.com\")\n",
+    "    client = OpenAI(api_key=\"\", base_url = \"https://api.openai.com\")\n",
     "\n",
     "    response = client.chat.completions.create(\n",
     "    model=\"gpt-3.5-turbo\",\n",
@@ -1220,6 +1220,9 @@
    },
    "notebookName": "hackathon_demo_share (1)",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
